calculating and interpreting tests for each problem

--- a/p8130_hw3.md
+++ b/p8130_hw3.md
@@ -1,3 +1,231 @@
 Homework 3
 ================
 
+# Problem 1
+
+## part a
+
+``` r
+lwt_data = birthwt |> 
+  pull(lwt)
+```
+
+``` r
+sample_mean = mean(lwt_data)
+sample_sd = sd(lwt_data)
+n = length(lwt_data)
+```
+
+The sample mean is (x bar) 129.8148148.  
+The sample standard deviation (s) is 30.5793804.  
+The *n* is 189.
+
+``` r
+t_value = qt(0.975, df = n-1)
+
+me = t_value * (sample_sd / sqrt(n))
+
+lower_bound = sample_mean - me
+upper_bound = sample_mean + me
+ci = c(lower_bound, upper_bound)
+```
+
+The critical value (t) is 1.9726627.  
+The margin of error is 4.3878383.
+
+The 95% confidence interval of true mean weight of American women is
+125.4269766, 134.2026531.
+
+# Problem 2
+
+## part a
+
+``` r
+smokers = birthwt |> 
+  filter(smoke == 1) |> 
+  pull(lwt)
+
+non_smokers = birthwt |> 
+  filter(smoke == 0) |> 
+  pull(lwt)
+```
+
+``` r
+variance = var.test(smokers, non_smokers)
+```
+
+The F statistic or the ratio of the variances of the two groups is
+1.412636.  
+The p-value or the probability of observing the F statistic if the null
+is true is 0.09744.
+
+Since the p-value is greater than 0.05, you fail to reject the null
+hypothesis which means there is not enough evidence to support that the
+variances of weights between smokers and non-smokers is significantly
+different.
+
+## part c
+
+``` r
+mean_smokers = mean(smokers)
+mean_non_smokers = mean(non_smokers)
+```
+
+``` r
+sd_smokers = sd(smokers)
+sd_non_smokers = sd(non_smokers)
+```
+
+``` r
+n_smokers = length(smokers)
+n_non_smokers = length(non_smokers)
+```
+
+``` r
+pooled_sd = sqrt(((n_smokers - 1) * sd_smokers^2 + (n_non_smokers - 1) * sd_non_smokers^2) / (n_smokers + n_non_smokers - 2))
+```
+
+``` r
+t_stat = (mean_smokers - mean_non_smokers) / (pooled_sd * sqrt(1/n_smokers + 1/n_non_smokers))
+```
+
+``` r
+df = n_smokers + n_non_smokers - 2
+```
+
+``` r
+p_value = 2 * pt(-abs(t_stat), df)
+```
+
+The t-statistic is -0.6047303.  
+The p-value is 0.5460913.
+
+Since the p_value is greater than 0.10, you fail to reject the null
+hypothesis, meaning there is not sufficient evidence and no significant
+difference.
+
+Another way to compute this test is by using t.test().
+
+``` r
+t_test = t.test(smokers, non_smokers, var.equal = TRUE)
+```
+
+# Problem 3
+
+## part a
+
+``` r
+hypertension = birthwt |> 
+  filter(ht == 1) |> 
+  pull(ht)
+
+n_total = nrow(birthwt)
+n_hypertension = length(hypertension)
+p_hat = n_hypertension / n_total
+```
+
+``` r
+standard_error = sqrt(p_hat * (1 - p_hat) / n_total)
+```
+
+``` r
+z_value = qnorm(0.995)
+```
+
+``` r
+me_3a = z_value * standard_error
+```
+
+``` r
+lower_bound_3a = p_hat - me_3a
+upper_bound_3a = p_hat + me_3a
+```
+
+``` r
+ci_3a = c(lower_bound_3a, upper_bound_3a)
+```
+
+The 99% confidence interval is 0.0178041, 0.10918.
+
+This means we are 99% confident that the true proportion of mothers with
+hypertension lies between 1.78% and 10.92%. Since 0.20 is not included,
+the data does not support the CDC’s claim for the sample as the
+proportion of mothers suffering from hypertension is significantly lower
+than 20%.
+
+## part b
+
+``` r
+p_0 = 0.20
+
+standard_error_3b = sqrt(p_0 * (1 - p_0) / n_total)
+z_stat_3b = (p_hat - p_0) / standard_error_3b
+```
+
+``` r
+p_value_3b = pnorm(z_stat_3b)
+```
+
+The z-statistic is -4.6916846.  
+The p-value is 1.3548229^{-6}.
+
+Since the p-value is less than 0.1, you reject the null hypothesis which
+suggesting the proportion of mothers with hypertension is significantly
+less than 20%.
+
+# Problem 4
+
+``` r
+smokers_ui = birthwt |> 
+  filter(smoke == 1) |> 
+  pull(ui)
+
+non_smokers_ui = birthwt |> 
+  filter(smoke == 0) |> 
+  pull(ui)
+```
+
+``` r
+meanui_smokers = mean(smokers_ui)
+meanui_non_smokers = mean(non_smokers_ui)
+```
+
+``` r
+sdui_smokers = sd(smokers_ui)
+sdui_non_smokers = mean(non_smokers_ui)
+```
+
+``` r
+nui_smokers = length(smokers_ui)
+nui_non_smokers = length(non_smokers_ui)
+```
+
+``` r
+t_test_4 = t.test(smokers_ui, non_smokers_ui, var.equal = TRUE)
+```
+
+The t-statistic is 0.85166.  
+The p-value is 0.3955.
+
+Since the p-value is greater than the 0.01 significance level, you fail
+to reject the null hypothesis as there is not sufficient evidence to
+support a significant difference in uterine irritability between smokers
+and non-smokers.
+
+# Problem 5
+
+## part c
+
+``` r
+anova = aov(bwt ~ factor(race), data = birthwt)
+
+anova_summary = summary(anova)
+```
+
+The F-statistic is 4.913.  
+The p-value is 0.00834.
+
+Since the p-value is less than the significance level of 0.05, you
+reject the null hypothesis which means there is sufficient evidence to
+support a statistically significant difference in birth weight among
+some racial groups.
