answering 5d and including comments for each code chunk

--- a/p8130_hw3.md
+++ b/p8130_hw3.md
@@ -6,11 +6,13 @@ Homework 3
 ## part a
 
 ``` r
+# extracting the lwt variable
 lwt_data = birthwt |> 
   pull(lwt)
 ```
 
 ``` r
+# calculating sample statistics
 sample_mean = mean(lwt_data)
 sample_sd = sd(lwt_data)
 n = length(lwt_data)
@@ -21,6 +23,7 @@ The sample standard deviation (s) is 30.5793804.
 The *n* is 189.
 
 ``` r
+# calculating the critical t value for the 95% CI, calculating the margin of error, and constructing a confidence interval
 t_value = qt(0.975, df = n-1)
 
 me = t_value * (sample_sd / sqrt(n))
@@ -36,11 +39,18 @@ The margin of error is 4.3878383.
 The 95% confidence interval of true mean weight of American women is
 125.4269766, 134.2026531.
 
+This means we are 95% confident that the true mean weight of American
+women lies between 125.4270 and 134.2027.
+
+Since the entire confidence interval is below 171 pounds, the claim may
+not hold true.
+
 # Problem 2
 
 ## part a
 
 ``` r
+# separating the data into smokers and non-smokers
 smokers = birthwt |> 
   filter(smoke == 1) |> 
   pull(lwt)
@@ -51,49 +61,83 @@ non_smokers = birthwt |>
 ```
 
 ``` r
-variance = var.test(smokers, non_smokers)
+# calculating variances
+var_smokers = var(smokers)
+var_non_smokers = var(non_smokers)
+```
+
+``` r
+# calculating F statistic
+f_stat = var_smokers / var_non_smokers
+```
+
+``` r
+# degrees of freedom
+df_smokers = length(smokers) - 1
+df_non_smokers = length(non_smokers) - 1
+```
+
+``` r
+# finding the critical F value
+alpha = 0.05
+f_critical = qf(1 - alpha, df_smokers, df_non_smokers)
+p_value = 1 - pf(f_stat, df_smokers, df_non_smokers)
 ```
 
 The F statistic or the ratio of the variances of the two groups is
 1.412636.  
 The p-value or the probability of observing the F statistic if the null
-is true is 0.09744.
+is true is 0.0974.
 
 Since the p-value is greater than 0.05, you fail to reject the null
 hypothesis which means there is not enough evidence to support that the
 variances of weights between smokers and non-smokers is significantly
 different.
 
+Another way to find this is by using var.test().
+
+``` r
+# F-test for equality of variances
+variance = var.test(smokers, non_smokers)
+```
+
 ## part c
 
 ``` r
+# calculating sample means
 mean_smokers = mean(smokers)
 mean_non_smokers = mean(non_smokers)
 ```
 
 ``` r
+# calculating sample standard deviations
 sd_smokers = sd(smokers)
 sd_non_smokers = sd(non_smokers)
 ```
 
 ``` r
+# calculating sample sizes
 n_smokers = length(smokers)
 n_non_smokers = length(non_smokers)
 ```
 
 ``` r
+# calculating pooled standard deviation
 pooled_sd = sqrt(((n_smokers - 1) * sd_smokers^2 + (n_non_smokers - 1) * sd_non_smokers^2) / (n_smokers + n_non_smokers - 2))
 ```
 
 ``` r
+# calculating t-statistic
 t_stat = (mean_smokers - mean_non_smokers) / (pooled_sd * sqrt(1/n_smokers + 1/n_non_smokers))
 ```
 
 ``` r
+# calculating degrees of freedom
 df = n_smokers + n_non_smokers - 2
 ```
 
 ``` r
+# calculating the p-value 
 p_value = 2 * pt(-abs(t_stat), df)
 ```
 
@@ -107,6 +151,7 @@ difference.
 Another way to compute this test is by using t.test().
 
 ``` r
+# t-test for equality of means
 t_test = t.test(smokers, non_smokers, var.equal = TRUE)
 ```
 
@@ -115,6 +160,7 @@ t_test = t.test(smokers, non_smokers, var.equal = TRUE)
 ## part a
 
 ``` r
+# calculating the sample proportion of mothers with hypertension
 hypertension = birthwt |> 
   filter(ht == 1) |> 
   pull(ht)
@@ -125,23 +171,28 @@ p_hat = n_hypertension / n_total
 ```
 
 ``` r
+# calculting the standard error
 standard_error = sqrt(p_hat * (1 - p_hat) / n_total)
 ```
 
 ``` r
+# z-value for 99% CI
 z_value = qnorm(0.995)
 ```
 
 ``` r
+# calculating the margin of error
 me_3a = z_value * standard_error
 ```
 
 ``` r
+# calculating bounds of the CI
 lower_bound_3a = p_hat - me_3a
 upper_bound_3a = p_hat + me_3a
 ```
 
 ``` r
+# printing CI results
 ci_3a = c(lower_bound_3a, upper_bound_3a)
 ```
 
@@ -156,6 +207,7 @@ than 20%.
 ## part b
 
 ``` r
+# defining the null hypothesis and calculating the test statistic
 p_0 = 0.20
 
 standard_error_3b = sqrt(p_0 * (1 - p_0) / n_total)
@@ -163,6 +215,7 @@ z_stat_3b = (p_hat - p_0) / standard_error_3b
 ```
 
 ``` r
+# calculating the p-value for the one-sided test
 p_value_3b = pnorm(z_stat_3b)
 ```
 
@@ -171,11 +224,13 @@ The p-value is 1.3548229^{-6}.
 
 Since the p-value is less than 0.1, you reject the null hypothesis which
 suggesting the proportion of mothers with hypertension is significantly
-less than 20%.
+less than 20%.We can conclude that the results of the test do not
+support the CDC’s claim.
 
 # Problem 4
 
 ``` r
+# extracting ui values for smokers and non-smokers
 smokers_ui = birthwt |> 
   filter(smoke == 1) |> 
   pull(ui)
@@ -186,21 +241,25 @@ non_smokers_ui = birthwt |>
 ```
 
 ``` r
+# calculating means
 meanui_smokers = mean(smokers_ui)
 meanui_non_smokers = mean(non_smokers_ui)
 ```
 
 ``` r
+# calculating standard deviations
 sdui_smokers = sd(smokers_ui)
 sdui_non_smokers = mean(non_smokers_ui)
 ```
 
 ``` r
+# calculating sample sizes
 nui_smokers = length(smokers_ui)
 nui_non_smokers = length(non_smokers_ui)
 ```
 
 ``` r
+# conducting t-test for equality of means
 t_test_4 = t.test(smokers_ui, non_smokers_ui, var.equal = TRUE)
 ```
 
@@ -217,6 +276,7 @@ and non-smokers.
 ## part c
 
 ``` r
+# conducting ANOVA and summary of the ANOVA
 anova = aov(bwt ~ factor(race), data = birthwt)
 
 anova_summary = summary(anova)
@@ -229,3 +289,40 @@ Since the p-value is less than the significance level of 0.05, you
 reject the null hypothesis which means there is sufficient evidence to
 support a statistically significant difference in birth weight among
 some racial groups.
+
+## part d
+
+``` r
+# Tukey's HSD test
+posthoc = TukeyHSD(anova)
+```
+
+The Tukey’s Honestly Significant Difference (HSD) test is used to
+perform multiple comparisons.
+
+**Comparison 2-1**:  
+The mean birth weight for group 2 is significantly lower than that for
+group 1 by about 383.03 grams as the difference of means is -383.03.  
+The confidence interval does not include zero \[-756.24, -9.82\], which
+means there is a significant difference.  
+The adjusted p-value of 0.0428 is less than 0.05, which means there is
+statistical significance.
+
+**Comparison 3-1**:  
+The mean birth weight for group 3 is significantly lower than that for
+group 1 by about 297.44 grams as the difference of means is -297.44.  
+The confidence interval does not include zero \[-566.17, -28.71\], which
+means there is a significant difference.  
+The adjusted p-value of 0.0260 is less than 0.05, which means there is
+statistical significance.
+
+**Comparison 3-2**:  
+There is no significant difference in mean birth between group 3 and 2
+as the difference is 85.59 grams.  
+The confidence interval includes zero \[-304.45, 475.63\], which means a
+significant difference cannot be concluded.  
+The adjusted p-value of 0.8624 is greater than 0.05, which means there
+is no statistical significance.
+
+The results suggest that racial groups associated with Group 1 have
+higher mean birth weights compared to Groups 2 and 3.
